<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
        android:id="@+id/fragment_history_menu_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="@dimen/cardElevation_CardView"
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_height_bottom_sheet_setting"
                android:padding="@dimen/padding_bottom_sheet_setting"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground">

        <ImageView
                android:layout_gravity="center"
                android:src="@drawable/ic_question_answer_black_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
        />
        <TextView
                android:layout_gravity="center"
                android:text="@string/setting_Question"
                android:layout_marginLeft="@dimen/layout_marginLeft_bottom_sheet_setting"
                android:textSize="@dimen/textsize_titleCardView"
                android:fontFamily="@font/regular"
                android:textColor="@color/colorBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
        />
            <NumberPicker
                    android:id="@+id/nb_question"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

            </NumberPicker>
        </LinearLayout>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_height_bottom_sheet_setting"
                android:padding="@dimen/padding_bottom_sheet_setting"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground">

            <ImageView
                    android:layout_gravity="center"
                    android:src="@drawable/ic_timer_black_24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
            />
            <TextView
                    android:layout_gravity="center"
                    android:text="@string/setting_Time"
                    android:layout_marginLeft="@dimen/layout_marginLeft_bottom_sheet_setting"
                    android:textSize="@dimen/textsize_titleCardView"
                    android:fontFamily="@font/regular"
                    android:textColor="@color/colorBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
            />
            <NumberPicker
                    android:id="@+id/nb_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

            </NumberPicker>
        </LinearLayout>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_height_bottom_sheet_setting"
                android:padding="@dimen/padding_bottom_sheet_setting"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground">

            <ImageView
                    android:layout_gravity="center"
                    android:src="@drawable/ic_developer_mode_black_24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
            />
            <TextView
                    android:layout_gravity="center"
                    android:text="@string/setting_mode"
                    android:textColor="@color/colorBlack"
                    android:layout_marginLeft="@dimen/layout_marginLeft_bottom_sheet_setting"
                    android:textSize="@dimen/textsize_titleCardView"
                    android:fontFamily="@font/regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
            />
            <Switch
                    android:id="@+id/btn_switch"
                    android:layout_marginLeft="@dimen/layout_marginLeft_bottom_sheet_setting"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textOff="Luyện"
                    android:textOn="Thi Thử"
            />
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>